<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/nav_catalog"
        android:icon="@drawable/ic_book"
        android:title="@string/catalog" />

    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/ic_diary"
        android:title="@string/diary" />

    <item
        android:id="@+id/nav_lending"
        android:icon="@drawable/ic_loan"
        android:title="@string/lending" />

    <item
        android:id="@+id/nav_borrowers"
        android:icon="@drawable/ic_borrower"
        android:title="@string/borrowers" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>