<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:iconTint="@android:color/white"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
